third attempt at fixing on firefox

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ header {
     height: fit-content;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 button {
     width: 75px;
